# diamond

./: README.md  diamond.cabal  dummy.service  hie.yaml
.github/workflows/: arm64.yml  main.yml  x86_64.yml
src/: Cli.hs  Diamond.hs  Logger.hs  SystemUtils.hs  Transaction.hs  Utils.hs
src/Commands/: Create.hs  List.hs  Manual.hs  Mount.hs  Remove.hs  Start.hs
test/: Dockerfile  test.sh
