cabal-version:      2.4
name:               diamond
version:            0.1.0.0

synopsis:           Easily host programs on your server with sane limits

-- license:         TODO

author:             Udit Karode
maintainer:         udit.karode@gmail.com

executable diamond
    main-is:            Cli.hs

    ghc-options:        -main-is Cli
                        -threaded
                        -rtsopts
                        -with-rtsopts=-N
                        -funfolding-use-threshold=16
                        -fexcess-precision
                        -optc-O3
                        -optc-ffast-math
                        -no-recomp

    mixins:             base hiding (Prelude)
                      , relude (Relude as Prelude)
                      , relude

    other-modules:      Paths_diamond
                      , SystemUtils
                      , Diamond
                      , Transaction
                      , Logger
                      , Utils

                     -- Commands
                      , Commands.Create

    build-depends:      base ^>=4.15.0.0
                      , optparse-applicative
                      , pretty-terminal
                      , process
                      , relude
                      , text

    hs-source-dirs:     src

    default-extensions: MultiWayIf
                      , OverloadedStrings

    default-language:   Haskell2010
