cabal-version:      2.4
name:               diamond
version:            0.1.5.0

synopsis:           Easily host programs on your server with sane limits

license:            GPL-3.0-only

author:             Udit Karode
maintainer:         udit.karode@gmail.com

executable diamond
    main-is:            Cli.hs

    ghc-options:        -main-is Cli
                        -threaded
                        -rtsopts
                        -with-rtsopts=-N
                        -funfolding-use-threshold=16
                        -fexcess-precision
                        -optc-O3
                        -optc-ffast-math
                        -fforce-recomp
                        -fno-warn-partial-type-signatures

    mixins:             base hiding (Prelude)
                      , relude (Relude as Prelude)
                      , relude

    other-modules:      Paths_diamond
                      , SystemUtils
                      , Transaction
                      , Diamond
                      , Logger
                      , Utils

                     -- Commands
                      , Commands.Create
                      , Commands.Remove
                      , Commands.Manual
                      , Commands.Mount
                      , Commands.Start
                      , Commands.List

    build-depends:      base ^>=4.15.0.0
                      , optparse-applicative
                      , disk-free-space
                      , pretty-terminal
                      , aeson-pretty
                      , regex-tdfa
                      , file-embed
                      , text-show
                      , directory
                      , byteunits
                      , process
                      , relude
                      , aeson
                      , text
                      , unix

    hs-source-dirs:     src

    default-extensions: MultiWayIf
                      , DeriveGeneric
                      , OverloadedStrings
                      , PartialTypeSignatures

    default-language:   Haskell2010
